# FitGL

./: .gitignore  .gitmodules  CMakeLists.txt
Apps/OpenGL/: CMakeLists.txt
Apps/OpenGL/g000_Triangle/: minimal.cpp
Apps/OpenGL/g001_Callbacks/: callbacks.cpp  callbacks.h
Apps/OpenGL/g002_MultipleViews/: multiview.cpp
Apps/OpenGL/g003_MultipleWindows/: multiwindow.cpp
Apps/OpenGL/g004_OrbitManipulator/: manipulator.cpp
Apps/OpenGL/g005_Imgui/: imgui.cpp
Apps/OpenGL/g006_Timer/: timer.cpp
Apps/OpenGL/g007_Textures/: textures.cpp
Apps/OpenGL/g008_ModelLoader/: main.cpp
Apps/OpenGL/g101_Primitives/: primitives.cpp
Apps/OpenGL/g102_Interpolation/: interpolation.cpp
Apps/OpenGL/g103_Blending/: blending.cpp
Apps/OpenGL/g201_3DPiskvorky/: piskvorky.cpp
Apps/OpenGL/g202_EndlessTerrain/: main.cpp
CMakeModules/: DependencyMacro.cmake  FindSDL2.cmake  FitMacros.cmake
Fit/: CMakeLists.txt
Fit/include/: BaseApp.h  Camera.h  FileWatcher.h  Fit.h  FitClasses.h  Image.h  Loader.h  Manipulator.h  SDLEventProc.h  SDLWindow.h  bunny.h
Fit/src/: BaseApp.cpp  Camera.cpp  FileWatcher.cpp  Loader.cpp  LoaderBinary.cpp  LoaderImage.cpp  LoaderText.cpp  Manipulator.cpp  SDLEventProc.cpp  SDLWindow.cpp
FitGL/: CMakeLists.txt
FitGL/include/: FitGL.h  FitGLClasses.h  LoaderGL.h  OpenGLApp.h  ShaderUtils.h  TimingMonitorGL.h  geGLclasses.h
FitGL/src/: LoaderTextureGL.cpp  OpenGLApp.cpp  TimingMonitorGL.cpp
